correct package names to make it work

--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,11 @@
                         </goals>
                         <configuration>
                             <inputSpec>
-                                ${project.basedir}/src/main/resources/pet-shop.yml
+                                ${project.basedir}/src/main/resources/api.yml
                             </inputSpec>
                             <generatorName>spring</generatorName>
-                            <apiPackage>org.atlanmod.petshop.openapi.api</apiPackage>
-                            <modelPackage>org.atlanmod.petshop.openapi.model</modelPackage>
+                            <apiPackage>org.atlanmod.spring.openapi.api</apiPackage>
+                            <modelPackage>org.atlanmod.spring.openapi.model</modelPackage>
                             <supportingFilesToGenerate>
                                 ApiUtil.java
                             </supportingFilesToGenerate>
